--- a/index.html
+++ b/index.html
@@ -106,9 +106,9 @@
             z-index: 2; /* 設置層級高於側邊欄 */
             height: 50px;
             margin-left: -20px; /* 將左方距離設置為0 */
+            font-family: 'Montserrat', sans-serif; /* 字體 */
         }
 
-        /* 頁脚樣式 */
         /* 頁脚樣式 */
         footer {
                 position: fixed; /* 固定在頁面上 */
@@ -118,6 +118,7 @@
                 color: #ECF0F1; /* 文字顏色 */
                 padding: 5px; /* 內邊距 */
                 text-align: left; /* 文本左對齊 */
+                font-family: 'Montserrat', sans-serif; /* 字體 */
                 z-index: 2; /* 設置層級高於側邊欄 */
                 margin-left: -20px; /* 向左移動20像素 */
                 padding-left: 100px; /* 在右側保持100px填充 */
@@ -192,7 +193,7 @@
     <!-- 主要內容區域 -->
     <div class="main-content">
         <!-- logo 圖片 -->
-        <img src="D:\web-projects\First show\images\FUTUreleap.png" alt="Logo" class="logo">
+        <img src="images/FUTUreleap.png" alt="Logo" class="logo">
         <!-- 主標題 -->
         <h1>Welcome to FutureLeap <br>We believe Each and every individual is capable of possessing better future</h1>
         <!-- 段落 -->
