--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             left: -250px; /* 初始隱藏在左側 */
             width: 250px; /* 寬度 */
             height: 100%; /* 高度 */
-            background: linear-gradient(to right, #ff7e5f, #feb47b, #ffeda3); /* 添加渐变背景 */
+            background: linear-gradient(to right, #000000, #666666, #999999); /* 添加渐变背景 */
             transition: left 0.5s; /* 添加過渡效果 */
             z-index: 0; /* 將側邊欄層級設置為最低 */
         }
